# gaden-robotics

./: .gitignore
results/: gsl_phase1_phase2_advisor_summary.md  gsl_sensitivity_plan.md  (+37 more)
src/gaden/gaden_common/: CMakeLists.txt  Readme.md  package.xml
src/gaden/gaden_common/cmake/: gui.cmake
src/gaden/gaden_common/gaden_internal_py/: utils.py
src/gaden/gaden_common/include/gaden_common/: Utils.hpp  VectorConversions.hpp  Visualization.hpp
src/gaden/gaden_environment/: CMakeLists.txt  package.xml
src/gaden/gaden_environment/include/environment/: environment.h
src/gaden/gaden_environment/src/: environment.cpp
src/gaden/gaden_filament_simulator/: CMakeLists.txt  package.xml
src/gaden/gaden_filament_simulator/src/: filament_simulator.cpp  filament_simulator.h
src/gaden/gaden_player/: CMakeLists.txt  package.xml
src/gaden/gaden_player/src/: simulation_player.cpp  simulation_player.h
src/gaden/gaden_preprocessing/: CMakeLists.txt  package.xml
src/gaden/gaden_preprocessing/src/: preprocessing.cpp  preprocessing.hpp
src/gaden/test_env/: CMakeLists.txt  package.xml
src/gaden/test_env/launch/: gaden.rviz  gaden_franka.rviz  gaden_franka_fp3_launch.py  gaden_franka_open_exp1.launch.py  gaden_franka_open_exp2.launch.py  gaden_franka_open_exp3.launch.py  gaden_franka_open_field.launch.py  gaden_franka_thesis_exp1_diffusion.launch.py  gaden_franka_thesis_exp2_timevarying.launch.py  gaden_franka_thesis_exp3_advection.launch.py  gaden_player_launch.py  gaden_preproc_launch.py  gaden_sim_launch.py  main_simbot_launch.py
src/gaden/test_env/navigation_config/: nav2_launch.py
src/gaden/test_env/ros_params/: gaden_params.yaml
src/gaden/test_env/scenarios/10x6_central_obstacle/cad_models/: 10x6_central_obstacle.stl  10x6_inner.stl
src/gaden/test_env/scenarios/10x6_central_obstacle/environment_configurations/config1/: config.yaml
src/gaden/test_env/scenarios/10x6_empty_room/: INITIAL_STATES.md  README_OPEN_FIELD.md  SUPERVISOR_INITIAL_STATE_EXPERIMENTS.md  SURGE_CAST_SPIRAL.md  initial_states.yaml
src/gaden/test_env/scenarios/10x6_empty_room/cad_models/: 10x6_inner.stl
src/gaden/test_env/scenarios/10x6_empty_room/environment_configurations/config1/: config.yaml
src/gaden/test_env/scenarios/10x6_empty_room/environment_configurations/config1/scenes/: scene1.yaml
src/gaden/test_env/scenarios/10x6_empty_room/environment_configurations/config1/simulations/sim1/: sim.yaml
src/gaden/test_env/scenarios/10x6_empty_room/environment_configurations/config_exp1_open_weak/: config.yaml
src/gaden/test_env/scenarios/10x6_empty_room/environment_configurations/config_exp1_open_weak/simulations/sim1/: sim.yaml
src/gaden/test_env/scenarios/10x6_empty_room/environment_configurations/config_exp2_open_timevarying/: config.yaml  occupancy.pgm
src/gaden/test_env/scenarios/10x6_empty_room/environment_configurations/config_exp2_open_timevarying/simulations/sim1/: sim.yaml
src/gaden/test_env/scenarios/10x6_empty_room/environment_configurations/config_exp3_open_steady/: config.yaml
src/gaden/test_env/scenarios/10x6_empty_room/environment_configurations/config_exp3_open_steady/scenes/: scene1.yaml
src/gaden/test_env/scenarios/10x6_empty_room/environment_configurations/config_exp3_open_steady/simulations/sim1/: sim.yaml
src/gaden/test_env/scenarios/10x6_empty_room/wind_simulations/exp3_open_steady/: wind_0.csv
src/gaden/test_env/scenarios/10x6_maze/cad_models/: 10x6_inner.stl  10x6_maze_obj_1.stl  10x6_maze_obj_2.stl
src/gaden/test_env/scenarios/10x6_maze/environment_configurations/config1/: config.yaml
src/gaden/test_env/scenarios/10x6_maze/environment_configurations/config1/simulations/sim1/: sim.yaml
src/gaden/test_env/scenarios/10x6_snake/cad_models/: 10x6_inner.stl  10x6_walls.stl
src/gaden/test_env/scenarios/10x6_snake/environment_configurations/config1/: config.yaml
src/gaden/test_env/scenarios/10x6_snake/environment_configurations/config1/simulations/sim1/: sim.yaml
src/gaden/test_env/scenarios/Exp_C/cad_models/: ROOMS-outlet-1.stl  ROOMS-outlet-2.stl  ROOMS-outlet-3.stl  ROOMS-outlet-4.stl  ROOMS-outlet-5.stl  ROOMS-outlet-6.stl  ROOMS-walls.stl
src/gaden/test_env/scenarios/Exp_C/environment_configurations/config1/: config.yaml
src/gaden/test_env/scenarios/Exp_C/environment_configurations/config1/scenes/: scene1.yaml
src/gaden/test_env/scenarios/Exp_C/environment_configurations/config1/simulations/sim1/: sim.yaml
src/gaden/test_env/scenarios/MAPIRlab/cad_models/: MAPIRlab_doors.stl  MAPIRlab_inner.stl  MAPIRlab_tables.stl  MAPIRlab_walls.stl  MAPIRlab_wardrobes.stl  MAPIRlab_windows.stl
src/gaden/test_env/scenarios/MAPIRlab/environment_configurations/config1/: config.yaml
src/gaden/test_env/scenarios/MAPIRlab/environment_configurations/config1/simulations/sim1/: sim.yaml
src/gaden/test_env/scenarios/outdoors/: gaden.gproj
src/gaden/test_env/scenarios/outdoors/cad_models/: limits.stl
src/gaden/test_env/scenarios/outdoors/environment_configurations/config1/: config.yaml
src/gaden/test_env/scenarios/outdoors/environment_configurations/config1/simulations/sim1/: sim.yaml
src/gaden/test_env/scenarios/outdoors/wind_simulations/: wind_0.csv
src/gaden/test_env/scenarios/thesis_exp1_diffusion_weak/environment_configurations/config1/: BasicSimScene.yaml
src/gaden/test_env/scenarios/thesis_exp1_diffusion_weak/environment_configurations/config1/simulations/sim1/: sim.yaml
src/gaden/test_env/scenarios/thesis_exp2_time_varying_wind/: wind_simulations
src/gaden/test_env/scenarios/thesis_exp2_time_varying_wind/environment_configurations/config1/scenes/: scene1.yaml
src/gaden/test_env/scenarios/thesis_exp3_advection_steady/: cad_models
src/gaden/test_env/scripts/: franka_fp3_ik_goal.py  franka_joint_interactive.py  gsl_randomized_initial_state_commands.py  gsl_repeatability_commands.py  gsl_repeatability_summary.py  gsl_sensitivity_commands.py  gsl_sensitivity_summary.py  gsl_supervisor_summary.py  open_field_build_gaden_data.sh  open_field_initial_state_commands.py  publish_ee_goal.py  surge_cast_spiral_gsl.py  zero_joint_states.py
(+20 files in other folders)
