<?xml version="1.0"?>
<package format="3">
 <name>gaden_player</name>
  <version>1.0.0</version>
  <description> This package loads the log files (results) from the gaden_simulator pkg, and provides services to evaluate the gas concentration and wind vector at a given location. The goal is to provide a fast (real time) service for the simulated MOX and Anemometer sensors.</description>
  <maintainer email="jgmonroy@uma.es">Javier Monroy</maintainer>

  <license>GPLv3</license>
  <author>Javier Monroy</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gaden_common</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>gaden_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>