<?xml version="1.0"?>
<package format="2">
  <name>gaden_preprocessing</name>
  <version>0.0.0</version>
  <description>GADEN preprocessing package to obtain the 3D occupancy gridmap from a given CAD model of the environment.</description>

  
  <maintainer email="ojedamorala@uma.es">pepe</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>LGPLv3</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gaden_common</depend>
  <depend>tf2</depend>
  <depend>std_msgs</depend>
  <depend>yaml_cpp_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
